style change (responsive), add receipe page

--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -8,6 +8,7 @@
         "about-us": "A propos de nous",
         "product": "Nos produits",
         "terroir": "Notre terroir",
+        "recipes": "Idées de recettes",
         "lang": "fr"
     },
     "home": {
