--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -12,7 +12,7 @@
         "lang": "fr"
     },
     "home": {
-        "header": "Bienvenue au Domaine Laluc",
+        "header": "Bienvenue dans la propriété Xavier Laluc",
         "subheader": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae"
     },
     "contact": {
@@ -41,21 +41,18 @@
         "employee1": {
             "name": "Employee 1",
             "title": "Directeur",
-            "email": "employee1@example.com",
             "description": "Employee 1 est le directeur de notre entreprise. Il a plus de 10 ans d'expérience dans le domaine et a su mener notre entreprise vers le succès grâce à son leadership et sa vision stratégique. Il est passionné par son travail et s'efforce toujours de faire progresser notre entreprise.",
             "alt": "Employee 1"
         },
         "employee2": {
             "name": "Employee 2",
             "title": "Manager",
-            "email": "employee2@example.com",
             "description": "Employee 2 est notre manager. Elle est responsable de la gestion de l'équipe et du bon déroulement des projets. Elle a une grande expérience en gestion de projet et sait comment motiver son équipe pour atteindre les objectifs fixés. Elle est toujours à l'écoute des besoins de ses collègues et s'efforce de créer un environnement de travail agréable.",
             "alt": "Employee 2"
         },
         "employee3": {
             "name": "Employee 3",
             "title": "Développeur",
-            "email": "employee3@example.com",
             "description": "Employee 3 est notre développeur. Il est en charge de la création et du développement de nos produits. Il a une grande expertise en développement web et mobile, et sait comment créer des produits innovants et performants. Il est passionné par son travail et aime relever de nouveaux défis techniques.",
             "alt": "Employee 3"
         }
